[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/level_two/level_two_intro.gd" type="Script" id=1]
[ext_resource path="res://art/boss_face.png" type="Texture" id=2]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/build_ui.tres" type="Theme" id=4]
[ext_resource path="res://ui/headers.tres" type="Theme" id=5]
[ext_resource path="res://ui/text_body.tres" type="Theme" id=6]
[ext_resource path="res://scripts/level_three/dialogue_box.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=6]
resource_name = "button_size_pump"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "size_pump"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="level_two_intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="bg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="role_selection" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="header" type="Control" parent="role_selection"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="header" type="RichTextLabel" parent="role_selection/header"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.5
margin_top = 32.0
margin_right = 224.5
margin_bottom = 93.0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Valitse rooli[/center]"
text = "Valitse rooli"

[node name="game_master_panel" type="Panel" parent="role_selection"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -182.5
margin_right = 429.0
margin_bottom = 182.5

[node name="game_master" type="Button" parent="role_selection/game_master_panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -141.0
margin_top = -66.0
margin_right = 141.0
margin_bottom = -32.0
theme = ExtResource( 4 )
text = "Pelinjohtaja"

[node name="role_description" type="RichTextLabel" parent="role_selection/game_master_panel"]
margin_left = 34.0
margin_top = 35.0
margin_right = 332.0
margin_bottom = 265.0
theme = ExtResource( 6 )
bbcode_text = "Pelinjohtajana käytät laskinta tehtävien ratkaisuun. Laskutoimituksiin tarvittavan datan saat muilta tiimisi jäseniltä."
text = "Pelinjohtajana käytät laskinta tehtävien ratkaisuun. Laskutoimituksiin tarvittavan datan saat muilta tiimisi jäseniltä."

[node name="role_panel" type="Panel" parent="role_selection"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -419.0
margin_top = -182.5
margin_right = -54.0
margin_bottom = 182.5

[node name="role_description" type="RichTextLabel" parent="role_selection/role_panel"]
margin_left = 34.0
margin_top = 35.0
margin_right = 332.0
margin_bottom = 265.0
theme = ExtResource( 6 )
bbcode_text = "Sinulla on käytössäsi sensori josta saatavaa dataa tarvitsette tehtävien ratkaisuun."
text = "Sinulla on käytössäsi sensori josta saatavaa dataa tarvitsette tehtävien ratkaisuun."
__meta__ = {
"_editor_description_": ""
}

[node name="player_role" type="Button" parent="role_selection/role_panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -141.0
margin_top = -58.0
margin_right = 141.0
margin_bottom = -24.0
theme = ExtResource( 4 )
text = "Pelaajan rooli tulee tähän"

[node name="dialogue_box" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -299.5
margin_right = 512.0
margin_bottom = 299.5
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 7 )

[node name="background_color" type="ColorRect" parent="dialogue_box"]
modulate = Color( 0, 0, 0, 0.627451 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="dialogue_box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.0
margin_top = -198.5
margin_right = 346.0
margin_bottom = -0.5

[node name="TextureRect" type="TextureRect" parent="dialogue_box/Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -202.5
margin_right = 128.0
margin_bottom = -74.5
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="dialogue" type="Control" parent="dialogue_box/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="0" type="RichTextLabel" parent="dialogue_box/Panel/dialogue"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -494.0
margin_top = -70.0
margin_right = -8.0
margin_bottom = 92.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[wave]Hei kaikki![/wave]
Olette tähän mennessä jo muodostaneet itsellenne tiimit ja nyt on aika pelata yhdessä."
text = "Hei kaikki!
Olette tähän mennessä jo muodostaneet itsellenne tiimit ja nyt on aika pelata yhdessä."

[node name="5" type="RichTextLabel" parent="dialogue_box/Panel/dialogue"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -494.0
margin_top = -70.0
margin_right = -8.0
margin_bottom = 92.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "Aloitetaan sillä että annatte tiimillenne nimen. Olkaa tarkkana, jokaisen tulee kirjoittaa nimi samalla tavalla!"
text = "Aloitetaan sillä että annatte tiimillenne nimen. Olkaa tarkkana, jokaisen tulee kirjoittaa nimi samalla tavalla!"

[node name="6" type="RichTextLabel" parent="dialogue_box/Panel/dialogue"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -494.0
margin_top = -70.0
margin_right = -8.0
margin_bottom = 92.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "Aloitetaan sillä että annatte tiimillenne nimen. Olkaa tarkkana, jokaisen tulee kirjoittaa nimi samalla tavalla!"
text = "Aloitetaan sillä että annatte tiimillenne nimen. Olkaa tarkkana, jokaisen tulee kirjoittaa nimi samalla tavalla!"

[node name="1" type="RichTextLabel" parent="dialogue_box/Panel/dialogue"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -494.0
margin_top = -70.0
margin_right = -8.0
margin_bottom = 92.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "Päättäkää keskuudestanne pelinjohtaja. Hän käyttää tällä tasolla laskinta. Teillä muilla on käytössänne sensorit joiden dataa kerrotte pelinjohtajalle."
text = "Päättäkää keskuudestanne pelinjohtaja. Hän käyttää tällä tasolla laskinta. Teillä muilla on käytössänne sensorit joiden dataa kerrotte pelinjohtajalle."

[node name="2" type="RichTextLabel" parent="dialogue_box/Panel/dialogue"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -494.0
margin_top = -70.0
margin_right = -8.0
margin_bottom = 92.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "Oikea data ja oikea laskutoimitus johtaa oikeaan tulokseen! Muistakaa että kommunikaatio on tärkeää. "
text = "Oikea data ja oikea laskutoimitus johtaa oikeaan tulokseen! Muistakaa että kommunikaatio on tärkeää. "

[node name="3" type="RichTextLabel" parent="dialogue_box/Panel/dialogue"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -494.0
margin_top = -70.0
margin_right = -8.0
margin_bottom = 92.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "Tällä tasolla nopeus on valttia. Mitä nopeampia olette sen enemmän pisteitä saatte, olettaen että olette vastanneet oikein."
text = "Tällä tasolla nopeus on valttia. Mitä nopeampia olette sen enemmän pisteitä saatte, olettaen että olette vastanneet oikein."

[node name="4" type="RichTextLabel" parent="dialogue_box/Panel/dialogue"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -494.0
margin_top = -70.0
margin_right = -8.0
margin_bottom = 92.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[wave]Onnea matkaan![/wave]"
text = "Onnea matkaan!"

[node name="next_dialogue" type="Button" parent="dialogue_box/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 293.5
margin_top = -24.5
margin_right = 388.5
margin_bottom = 18.5
rect_pivot_offset = Vector2( 47, 21 )
text = "jatka"

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialogue_box/Panel/next_dialogue"]
autoplay = "button_size_pump"
anims/button_size_pump = SubResource( 6 )

[node name="naming" type="Control" parent="dialogue_box"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )

[node name="enter_name" type="LineEdit" parent="dialogue_box/naming"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 325.5
margin_top = 326.5
margin_right = 658.5
margin_bottom = 424.5

[node name="apply_name" type="Button" parent="dialogue_box/naming"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 432.5
margin_top = 425.0
margin_right = 527.5
margin_bottom = 468.0
rect_pivot_offset = Vector2( 47, 21 )
theme = ExtResource( 3 )
text = "ok!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialogue_box/naming/apply_name"]
anims/RESET = SubResource( 7 )
anims/size_pump = SubResource( 8 )

[connection signal="pressed" from="role_selection/game_master_panel/game_master" to="." method="_on_game_master_pressed"]
[connection signal="pressed" from="role_selection/role_panel/player_role" to="." method="_on_player_role_pressed"]
[connection signal="dialogue_ended" from="dialogue_box" to="." method="_on_dialogue_box_dialogue_ended"]
[connection signal="pressed" from="dialogue_box/Panel/next_dialogue" to="." method="_on_next_dialogue_pressed"]
[connection signal="pressed" from="dialogue_box/Panel/next_dialogue" to="dialogue_box" method="_on_next_dialogue_pressed"]
[connection signal="pressed" from="dialogue_box/naming/apply_name" to="." method="_on_apply_name_pressed"]
